--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <meta charset="utf-8">
-  <meta name="description" content="WebRTC code samples">
   <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
-  <meta itemprop="description" content="Client-side WebRTC code samples">
-  <meta itemprop="name" content="WebRTC code samples">
-  <meta itemprop="image" content="./estee-demo-logo.png">
+  <meta itemprop="image" content="estee-demo-logo.png">
   <meta name="mobile-web-app-capable" content="yes">
   <meta id="theme-color" name="theme-color" content="#ffffff">
-
   <link href="./css/main.css" rel="stylesheet"></link>
-
   <title>Estée Demo</title>
 
 </head>
