removed about page

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </div>
   </script>
 
-<nav>
-    <ul>
-        <li>
-            <a href="about.html">ABOUT</a>
-        </li>
-    </ul>
+<header>
+    <h4>
+        Hold any Estée Lauder product up to the camera.
+        Take a picture and we'll find it for you. We'll show you how to make it part of your perfect nighttime
+        ritual so you can wake up beautiful every day.
+    </h4>
     <p class="subtitle" >For the most accurate experience, use a solid white background.</p>
-</nav>
+</header>
 
   <div id="container" class="play">
     <div id="cam">
